--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
         <div class="message">
             <p id="love-message"></p>
         </div>
+        <ul class="wave-menu" id="wave-menu">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>          
     </div>
+    <audio id="background-music" src="src/mp3/music.mp3" autoplay loop></audio>
     <script src="src/js/script.js"></script>
 </body>
 </html>
